Updating route name

--- a/modules/User/config/routes.yml
+++ b/modules/User/config/routes.yml
@@ -2,6 +2,6 @@ User_Manage_Create:
     pattern:  /user/manage/create
     defaults: { _controller: "User:Manage:create"}
     
-User_Manage_Create:
+Homepage:
     pattern:  /
     defaults: { _controller: "User:Manage:index"}
