Adding in routes, views and controller actions for Twig support

--- a/modules/User/config/routes.yml
+++ b/modules/User/config/routes.yml
@@ -5,3 +5,8 @@ User_Manage_Create:
 Homepage:
     pattern:  /
     defaults: { _controller: "User:Manage:index"}
+    
+       
+Homepage_Twig:
+    pattern:  /twig
+    defaults: { _controller: "User:Manage:indextwig"}
