Updating data source related changes. Added a new route and controller action to pull all the users out of the system

--- a/modules/User/resources/config/routes.yml
+++ b/modules/User/resources/config/routes.yml
@@ -1,3 +1,7 @@
 User_Manage_Create:
     pattern:  /user/manage/create
     defaults: { _controller: "User:Manage:create"}
+    
+Users_List:
+    pattern:  /user/list
+    defaults: { _controller: "User:Manage:list"}
