Add '"minimum-stability": "dev"' to composer.json
* The composer.json fix allows the installation of zendframework
  dev-master release (not stable).
* Remove executable bits from README.md

--- a/PPI/composer.json
+++ b/PPI/composer.json
@@ -1,5 +1,6 @@
 {
-	"require": {
-		"ppi/ppi": "dev-master"
-	}
+    "require": {
+        "ppi/ppi": "dev-master"
+    },
+    "minimum-stability": "dev"
 }
