--- a/PPI/composer.json
+++ b/PPI/composer.json
@@ -1,6 +1,21 @@
 {
-    "require": {
-        "ppi/ppi": "dev-master"
-    },
-    "minimum-stability": "dev"
+	"require": {
+		"ppi/framework": "dev-master"
+	},
+	"minimum-stability": "dev",
+	
+	"repositories": [{
+		"type": "package",
+		"package": {
+			"name": "ppi/zendframework",
+			"version": "2.0.0-beta5",
+			"dist": {
+				"url": "http://packages.zendframework.com/releases/ZendFramework-2.0.0beta5/ZendFramework-2.0.0beta5-minimal.zip",
+				"type": "zip"
+			},
+			"autoload": {
+				"psr-0": { "Zend": "library" }
+			}
+		}
+	}]
 }
