--- a/modules/Application/resources/config/routes.yml
+++ b/modules/Application/resources/config/routes.yml
@@ -2,7 +2,10 @@ Homepage:
     pattern:  /
     defaults: { _controller: "Application:Index:index"}
 
-
 Homepage_Twig:
     pattern:  /twig
     defaults: { _controller: "Application:Index:indextwig"}
+
+Homepage_Smarty:
+    pattern:  /smarty
+    defaults: { _controller: "Application:Index:indexsmarty"}
