Adding composer.json updates for the ppi/user-module package. Adding public CSS/JS files to complement the new user package. Removing the User module from this repository as the user module is now in its own repository and pulled in via composer.

--- a/modules/Application/resources/config/routes.yml
+++ b/modules/Application/resources/config/routes.yml
@@ -2,6 +2,10 @@ Homepage:
     pattern:  /
     defaults: { _controller: "Application:Index:index"}
 
+Homepage_Flashes:
+    pattern:  /flashes
+    defaults: { _controller: "Application:Index:indexWithFlashes"}
+
 Homepage_Twig:
     pattern:  /twig
     defaults: { _controller: "Application:Index:indextwig"}
