--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "ppi/framework",
+    "name": "ppi/skeleton-app",
     "description": "The PPI Skeleton Application - A pre-built application around the PPI Framework. Lots of extra goodies",
     "homepage": "http://www.ppi.io",
     "license": "MIT",
