--- a/composer.json
+++ b/composer.json
@@ -13,20 +13,20 @@
     ],
     "require": {
         "swiftmailer/swiftmailer": ">=4.2.0,<4.3-dev",
-        "ppi/framework": "dev-config-2.0"
+        "ppi/framework": "2.1.*@beta"
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "2.0-dev"
+            "dev-master": "2.1-dev"
         }
     },
     "repositories": [{
         "type": "package",
         "package": {
             "name": "ppi/zendframework",
-            "version": "2.0.3",
+            "version": "2.0.5",
             "dist": {
-                "url": "http://packages.zendframework.com/releases/ZendFramework-2.0.3/ZendFramework-minimal-2.0.3.zip",
+                "url": "http://packages.zendframework.com/releases/ZendFramework-2.0.5/ZendFramework-minimal-2.0.5.zip",
                 "type": "zip"
             },
             "autoload": {
