--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,13 @@
 # PPI directories
-vendor/*
-*/logs/*
-*/cache/*
+app/cache/*
+app/logs/*
+vendor
 
 # Backup files created by IDEs
 *~
 
 # Mac OS X hidden files
 .DS_Store
+.idea
+.project
+.settings
