Add app/FrameworkRequirements.php and app/check

--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     ],
     "require": {
         "swiftmailer/swiftmailer": ">=4.2.0,<4.3-dev",
-        "ppi/framework": "2.1.x-dev"
+        "ppi/framework": "2.1.x-dev",
+        "noiselabs/ppi-distribution-module": "dev-master"
     },
     "extra": {
         "branch-alias": {
@@ -34,6 +35,19 @@
             }
         }
     }],
-    "minimum-stability": "dev"
-    
+    "scripts": {
+        "post-install-cmd": [
+            "NoiseLabs\\Module\\DistributionModule\\Composer\\ScriptHandler::installRequirementsFile"
+        ],
+        "post-update-cmd": [
+            "NoiseLabs\\Module\\DistributionModule\\Composer\\ScriptHandler::installRequirementsFile"
+        ]
+    },
+    "minimum-stability": "dev",
+    "extra": {
+        "ppi-app-dir": "app",
+        "ppi-web-dir": "public"
+    }
+
+
 }
