--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
     "require": {
         "ppi/framework": "2.1.x-dev",
         "ppi/distribution-module": "dev-master",
+        "twitter/bootstrap": "v2.3.1",
         "swiftmailer/swiftmailer": ">=4.2.0,<4.3-dev"
     },
     "extra": {
@@ -33,5 +34,8 @@
     "extra": {
         "ppi-app-dir": "app",
         "ppi-web-dir": "public"
+    },
+    "config": {
+        "component-dir": "public/libs"
     }
 }
