App is now fully functional with Yaml config by requiring only config/app.yml

--- a/app/config/app.yml
+++ b/app/config/app.yml
@@ -1,3 +1,12 @@
+imports:
+    - { resource: datasource.yml }
+    - { resource: modules.yml }
+
+templating:
+    engines: ["php", "smarty", "twig"]
+    globals:
+        - ga_tracking: "UA-XXXXX-X"
+
 monolog:
     handlers:
         main:
