Add the vendor path to module_listener_options.module_paths

--- a/app/config/modules.yml
+++ b/app/config/modules.yml
@@ -4,5 +4,5 @@ modules:
     - UserModule
 
 module_listener_options:
-    module_paths: ["./modules"]
+    module_paths: ['./modules', './vendor']
     routingEnabled: true
