Add a skeleton.module.path option to both app.yml, app.php to make console happy

--- a/app/config/app.yml
+++ b/app/config/app.yml
@@ -7,6 +7,8 @@ templating:
     globals:
         - ga_tracking: "UA-XXXXX-X"
 
+skeleton.module.path: './utils/skeleton_module'
+
 monolog:
     handlers:
         main:
