Update the configuration with the move from "modules" to "modules.active_modules"

--- a/app/config/datasource.yml
+++ b/app/config/datasource.yml
@@ -1,8 +1,9 @@
-datasource:
-    connections:
-        main:
-            type:   "pdo_mysql"
-            host:   "localhost"
-            dbname: "ppi2_skeleton"
-            user:   "root"
-            pass:   ""
+framework:
+    datasource:
+        connections:
+            main:
+                type:   "pdo_mysql"
+                host:   "localhost"
+                dbname: "ppi2_skeleton"
+                user:   "root"
+                pass:   ""
