--- a/app/config/modules.yml
+++ b/app/config/modules.yml
@@ -1,8 +1,7 @@
 modules:
+    active_modules:
     - Framework
     - Application
     - UserModule
-
-module_listener_options:
-    module_paths: ['./modules', './vendor']
-    routingEnabled: true
+    module_listener_options:
+        module_paths: ['./modules', './vendor']
