--- a/app/config/app.yml
+++ b/app/config/app.yml
@@ -2,12 +2,14 @@ imports:
     - { resource: datasource.yml }
     - { resource: modules.yml }
 
-templating:
-    engines: ["php", "smarty", "twig"]
-    globals:
-        - ga_tracking: "UA-XXXXX-X"
+framework:
+    templating:
+        engines: ["php", "smarty", "twig"]
+        globals:
+            - ga_tracking: "UA-XXXXX-X"
 
-skeleton.module.path: './utils/skeleton_module'
+    skeleton_module:
+        path: './utils/skeleton_module'
 
 monolog:
     handlers:
