--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "The PPI Skeleton Application - A pre-built application around the PPI Framework. Lots of extra goodies",
     "homepage": "http://www.ppi.io",
     "license": "MIT",
-    "keywords": ["framework", "ppi", "skeletonapp", "bootstrap", "html5", "jquery", "mustache"],
+    "keywords": ["framework", "ppi", "symfony", "zend", "doctrine", "laravel", "fuelphp", "mongo", "pdo", "ppi", "skeletonapp", "bootstrap", "html5", "jquery", "mustache"],
     "type": "library",
     "authors": [
         {
