Adding some zf2 composer deps

--- a/composer.json
+++ b/composer.json
@@ -12,14 +12,7 @@
         }
     ],
     "require": {
-        "ppi/framework": "2.1.x-dev",
-        "ppi/composer-installer": "dev-master",
-        "ppi/distribution-module": "dev-master"
-    },
-    "extra": {
-        "branch-alias": {
-            "dev-master": "2.1-dev"
-        }
+        "ppi/framework": "dev-feature/composer-deps"
     },
     "scripts": {
         "post-install-cmd": [
