Add ppi/distribution-module to composer.json and point framework reference to "dev-2.1-noiselabs"

--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         }
     ],
     "require": {
-        "ppi/framework": "dev-feature/composer-deps"
+        "ppi/framework": "dev-2.1-noiselabs",
+        "ppi/distribution-module": "dev-noiselabs"
     },
     "scripts": {
         "post-install-cmd": [
