--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,13 @@
     ],
     "require": {
         "ppi/framework": "dev-2.1-noiselabs",
-        "ppi/distribution-module": "dev-noiselabs"
+        "ppi/bower-module": "dev-master",
+        "ppi/cache-module": "dev-master",
+        "ppi/distribution-module": "dev-master",
+        "ppi/mustache-module": "dev-master",
+        "ppi/smarty-module": "dev-master",
+        "ppi/twig-module": "dev-master",
+        "ppi/twitter-bootstrap-module": "dev-master"
     },
     "scripts": {
         "post-install-cmd": [
