--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         }
     ],
     "require": {
-        "ppi/framework": "dev-feature/composer-deps"
+        "ppi/framework": "2.1-dev"
     },
     "scripts": {
         "post-install-cmd": [
