Move default configuration to app/config/base, make "dev" and "prod" inherit from base

--- a/app/config/dev/app.yml
+++ b/app/config/dev/app.yml
@@ -1,2 +1,9 @@
 imports:
-    - { resource: prod/app.yml }
+    - { resource: ../base/app.yml }
+
+monolog:
+    handlers:
+        main:
+            type:  stream
+            path:  %app.logs_dir%/%app.environment%.log
+            level: debug
