--- a/app/config/prod/app.yml
+++ b/app/config/prod/app.yml
@@ -6,4 +6,4 @@ monolog:
         main:
             type:  stream
             path:  %app.logs_dir%/%app.environment%.log
-            level: debug
+            level: warning
