Enable caching module config in production

--- a/app/config/base/app.yml
+++ b/app/config/base/app.yml
@@ -10,6 +10,10 @@ modules:
     - PPI\TwigModule
     - PPI\TwitterBootstrapModule
     module_listener_options:
+        config_cache_enabled: false
+        module_map_cache_enabled: false
+        cache_dir: "%app.cache_dir%"
+        config_cache_key: %app.name%
         module_paths: ['./modules', './vendor']
 
 framework:
