Add option "module_map_cache_key" to the configuration

--- a/app/config/base/app.yml
+++ b/app/config/base/app.yml
@@ -3,17 +3,18 @@ imports:
 
 modules:
     active_modules:
-    - Framework
-    - Application
-    - PPI\BowerModule
-    - PPI\SmartyModule
-    - PPI\TwigModule
-    - PPI\TwitterBootstrapModule
+        - Framework
+        - Application
+        - PPI\BowerModule
+        - PPI\SmartyModule
+        - PPI\TwigModule
+        - PPI\TwitterBootstrapModule
     module_listener_options:
-        config_cache_enabled: false
-        module_map_cache_enabled: false
         cache_dir: "%app.cache_dir%"
+        config_cache_enabled: false
         config_cache_key: %app.name%
+        module_map_cache_enabled: false
+        module_map_cache_key: %app.name%
         module_paths: ['./modules', './vendor']
 
 framework:
