--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,8 @@
         }
     ],
     "require": {
-        "ppi/framework": "dev-feature/composer-deps"
-        "ppi/cache-module": "dev-master",
+        "ppi/framework": "dev-feature/composer-deps",
+        "ppi/cache-module": "dev-master"
     },
     "scripts": {
         "post-install-cmd": [
