--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "ppi/framework": "dev-develop",
         "ppi/bower-module": "dev-develop",
         "ppi/cache-module": "dev-master",
+        "ppi/ppi-datasource-module": "dev-master",
         "ppi/distribution-module": "dev-develop",
         "ppi/mustache-module": "dev-develop",
         "ppi/smarty-module": "dev-develop",
