--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         }
     ],
     "require": {
-        "ppi/framework": "dev-develop",
+        "ppi/framework": "dev-feature/http-kernel",
         "ppi/bower-module": "dev-develop",
         "ppi/cache-module": "dev-master",
         "ppi/distribution-module": "dev-develop",
