added user module dependency, removed monolog-module

--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "ppi/smarty-module": "dev-develop",
         "ppi/twig-module": "dev-develop",
         "ppi/twitter-bootstrap-module": "dev-develop",
-        "ppi/monolog-module": "dev-master",
+        "ppi/user-module": "dev-master",
         "ppi/composer-module": "dev-master"
     },
     "scripts": {
