Vagrant and Docker development environments

--- a/app/config/base/datasource.yml
+++ b/app/config/base/datasource.yml
@@ -3,7 +3,7 @@ framework:
         connections:
             main:
                 type:   "pdo_mysql"
-                host:   "localhost"
+                host:   "mysql"
                 dbname: "ppi2_skeleton"
                 user:   "root"
-                pass:   ""
+                pass:   "ppi"
