--- a/composer.json
+++ b/composer.json
@@ -6,15 +6,23 @@
     "keywords": ["framework", "ppi", "symfony", "zend", "doctrine", "laravel", "fuelphp", "mongo", "pdo", "ppi", "skeletonapp", "bootstrap", "html5", "jquery", "mustache"],
     "type": "library",
     "authors": [
-        {
-            "name": "Paul Dragoonis",
-            "email": "paul@ppi.io"
-        }
+      {
+          "name": "Paul Dragoonis",
+          "email": "paul@ppi.io"
+      },
+      {
+          "name": "Vítor Brandão",
+          "email": "vitor@ppi.io"
+      },
+      {
+          "name": "PPI Community",
+          "homepage": "http://www.ppi.io/contributors"
+      }
     ],
     "require": {
         "ppi/framework": "dev-develop",
         "ppi/cache-module": "dev-develop",
-        "ppi/ppi-datasource-module": "dev-develop",
+        "ppi/datasource-module": "dev-develop",
         "ppi/distribution-module": "dev-develop",
         "ppi/user-module": "dev-develop",
         "ppi/blog-module": "dev-develop",
