--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,9 @@
     "name": "ppi/skeletonapp",
     "dependencies": {
         "bootstrap": "3.3.2",
-        "modernizr": "2.8.3"
+        "modernizr": "2.8.3",
+        "fontawesome": "4.3.0",
+        "jquery-ui": "1.11.4"
     },
     "private": true
 }
