Symfony routing as default
- Removed aura from composer.json
- Fixed index action
- Fixed module routing to use symfony instead of aura

--- a/composer.json
+++ b/composer.json
@@ -28,8 +28,7 @@
         "ppi/blog-module": "~1.0",
         "ppi/smarty-module": "~1.0",
         "ppi/twig-module": "~1.0",
-        "ppi/mustache-module": "~1.0",
-        "ppi/aura-router": "~1.0"
+        "ppi/mustache-module": "~1.0"
     },
     "scripts": {
         "post-install-cmd": [
