Remove app/cache/.gitignore, app/logs/.gitignore and update ppi/framework in composer.lock

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # PPI files and directories
-app/cache/*
+app/cache/
 app/FrameworkRequirements.php
-app/logs/*
+app/logs/
 public/modules/*
 vendor
 composer.phar
