--- a/composer.json
+++ b/composer.json
@@ -47,5 +47,8 @@
     "prefer-stable": true,
     "branch-alias": {
         "dev-master": "2.2-dev"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^4.8"
     }
 }
