--- a/composer.json
+++ b/composer.json
@@ -46,7 +46,7 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "branch-alias": {
-        "tests-dispatch": "2.2-dev"
+        "support/2.1": "2.2-dev"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.8"
