--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
           }
     ],
     "require": {
-        "ppi/framework": "2.2.x-dev",
+        "ppi/framework": "^2.1",
         "ppi/distribution-module": "dev-master"
     },
     "scripts": {
@@ -46,7 +46,7 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "branch-alias": {
-        "support/2.1": "2.2-dev"
+        "dev-master": "2.2.x-dev"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.8"
