Symfony bundles loading but configuration stage causing issues

--- a/app/config/base/symfony_config.yml
+++ b/app/config/base/symfony_config.yml
@@ -1,3 +1,9 @@
 framework:
     secret: mysecret
     router:
+        resource: '%kernel.root_dir%/config/dev/symfony_routing.yml'
+
+    templating:
+        engines: ['twig']
+
+nelmio_api_doc: ~
