--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,9 @@
     ],
     "require": {
         "ppi/framework": "^2.1",
-        "ppi/distribution-module": "dev-master"
+        "ppi/distribution-module": "dev-master",
+        "friendsofsymfony/user-bundle": "^1.3",
+        "nelmio/api-doc-bundle": "^2.12"
     },
     "scripts": {
         "post-install-cmd": [
