--- a/app/config/base/symfony_bundles.yml
+++ b/app/config/base/symfony_bundles.yml
@@ -1,3 +1,4 @@
 bundles:
   - Symfony\Bundle\FrameworkBundle\FrameworkBundle
+  - Symfony\Bundle\TwigBundle\TwigBundle
   - Nelmio\ApiDocBundle\NelmioApiDocBundle
