Removing FOSUserBundle bits

--- a/app/config/base/symfony_bundles.yml
+++ b/app/config/base/symfony_bundles.yml
@@ -1,4 +1,6 @@
 bundles:
   - Symfony\Bundle\FrameworkBundle\FrameworkBundle
+  - Symfony\Bundle\SecurityBundle\SecurityBundle
   - Symfony\Bundle\TwigBundle\TwigBundle
   - Nelmio\ApiDocBundle\NelmioApiDocBundle
+#  - FOS\UserBundle\FOSUserBundle
