--- a/app/config/base/symfony_routing.yml
+++ b/app/config/base/symfony_routing.yml
@@ -2,3 +2,7 @@
 NelmioApiDocBundle:
     resource: "@NelmioApiDocBundle/Resources/config/routing.yml"
     prefix:   /api/doc
+
+#
+#fos_user:
+#    resource: "@FOSUserBundle/Resources/config/routing/all.xml"
