--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "ppi/framework": "^2.1",
         "ppi/distribution-module": "dev-master",
         "friendsofsymfony/user-bundle": "^1.3",
-        "nelmio/api-doc-bundle": "^2.12"
+        "nelmio/api-doc-bundle": "^2.12",
+        "knplabs/knp-menu-bundle": "^2.0"
     },
     "scripts": {
         "post-install-cmd": [
@@ -36,6 +37,11 @@
             "PPI\\DistributionModule\\Composer\\ScriptHandler::permissionDirs",
             "PPI\\DistributionModule\\Composer\\ScriptHandler::installRequirementsFile"
         ]
+    },
+    "autoload": {
+        "psr-4": {
+            "TestBundle\\": "bundles/TestBundle/"
+        }
     },
     "extra": {
         "ppi-app-dir": "app",
